<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hand_gestures</name>
  <version>0.0.0</version>
  <description>Hand Gesture Recognition With ROS2. Outputs the pointcloud of depth image</description>
  <maintainer email="beslin-tony.mathews@informatik.hs-fulda.de">Beslin Tony Mathews</maintainer>
  <maintainer email="darya.traxel@informatik.hs-fulda.de">Darya Traxel</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
